--- a/hw79_back_end/package.json
+++ b/hw79_back_end/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "hw79_extra_task",
+  "name": "shop-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "author": "",
@@ -13,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "multer": "^1.4.1",
+    "mysql": "^2.16.0",
     "nanoid": "^2.0.1"
   },
   "devDependencies": {
